# quotation-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
src/quotation_mcp/: config.py  server.py
src/quotation_mcp/database/: connection.py
src/quotation_mcp/models/: product.py
src/quotation_mcp/repositories/: product_repository.py
src/quotation_mcp/services/: search_service.py
src/quotation_mcp/tools/: read_tools.py
tests/: test_search_service.py
