[project]
name = "quotation-mcp-python"
version = "0.1.0"
description = "Servidor MCP para la gestión y generación de cotizaciones"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp",
]

[project.scripts]
quotation-mcp = "quotation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quotation_mcp"]