[project]
name = "quotation-mcp-python"
version = "0.2.0"
description = "Servidor MCP de solo lectura para consultar el catálogo de cotizaciones"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "rapidfuzz>=3.12,<4",
]

[project.scripts]
quotation-mcp = "quotation_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quotation_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
